# kTerminal

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  build.bat  kCommand.c  kCommand.h  kFile.c  kFile.h  kLogger.c  kLogger.h  kSerial.c  kSerial.h  kStatus.h  kString.h  main.c  serial.c  serial.h  setting.txt
cmd/: kCommand.c  kCommand.h  kCommandTarget.c  kCommandTarget.h  kCommandTwi.c  kCommandTwi.h
command/: kCommand.c  kCommand.h  kCommandHelp.c  kCommandHelp.h  kCommandTarget.c  kCommandTarget.h  kCommandTwi.c  kCommandTwi.h
inc/: kCommand.h  kFile.h  kSerial.h  serial.h
source/: kLogger.c  kLogger.h  kString.c  kString.h  serial.c  serial.h
src/: kCommand.c  kFile.c  serial.c
